<resources>
    <string name="app_name">notes4notes</string>
    <string name="name">Name</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="application_logo">application logo</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_feed">Home</string>
    <string name="compose_post">Compose</string>
    <string name="user_profile">Profile</string>
    <string name="post_title">POST TITLE</string>
    <string name="post_author">POST AUTHOR</string>
    <string name="postDescriptionText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</string>
    <string name="likebutton">likeButton</string>
    <string name="unlikebutton">unlikeButton</string>
    <string name="postauthorimage">postAuthorImage</string>
    <string name="download">Download</string>
    <string name="comment">Comment</string>
    <string name="commentHint">Good Job! loving the notes</string>
    <string name="composeTagHint">CSCI 220 etc.</string>
    <string name="submit">Submit</string>
    <string name="hintComposeTitle">Notes For CSCI 313</string>
    <string name="hintComposeDescription">My review notes for 313 with Jao</string>
    <string name="title">Title:</string>
    <string name="nullContentDesc">not important</string>
    <string name="description">Description:</string>
    <string name="tags">Tags</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="commentBodyHint">Write something meaningful here</string>
    <string name="LogoutOption">Logout</string>
</resources>
