<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_timeline"
        android:title="@string/home_feed"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"

        />
    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_compose_var_1"
        android:title="@string/compose_post"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/user_profile"
        app:showAsAction="always" />

</menu>