<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">


    <ImageView
        android:id="@+id/postAuthorImage"
        android:layout_width="137dp"
        android:layout_height="148dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/postauthorimage"
        app:layout_constraintBottom_toTopOf="@+id/postAuthor"
        app:layout_constraintEnd_toStartOf="@+id/postDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile" />

    <TextView
        android:id="@+id/postTitle"
        android:layout_width="141dp"
        android:layout_height="21dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="10dp"
        android:text="@string/post_title"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/postDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/postAuthorImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postAuthor"
        android:layout_width="116dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="260dp"
        android:text="@string/post_author"
        android:textAlignment="viewStart"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/postRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postAuthorImage" />

    <TextView
        android:id="@+id/postDescription"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="121dp"
        android:text="@string/postDescriptionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postAuthorImage"
        app:layout_constraintTop_toBottomOf="@+id/postTitle" />

    <RatingBar
        android:id="@+id/postRating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="11dp"
        android:numStars="5"
        android:rating="3"
        app:layout_constraintBottom_toTopOf="@+id/postLikeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postAuthor" />

    <ImageButton
        android:id="@+id/postLikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/likebutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/postUnlikeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postRating"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/postUnlikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="284dp"
        android:contentDescription="@string/unlikebutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postLikeButton"
        app:layout_constraintTop_toBottomOf="@+id/postRating"
        app:layout_constraintVertical_bias="0.689"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <Button
        android:id="@+id/postCommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="1dp"
        android:text="@string/comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postDownloadButton"
        app:layout_constraintTop_toBottomOf="@+id/postDescription" />

    <Button
        android:id="@+id/postDownloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="1dp"
        android:text="@string/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postUnlikeButton"
        app:layout_constraintTop_toBottomOf="@+id/postDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>